clusters/takeout/apps/frigate/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: frigate
  namespace: default
  annotations: {}
    # fluxcd.io/ignore: "true"
  labels:
    app: frigate
spec:
  replicas: 1 # active longhorn
  serviceName: frigate
  selector:
    matchLabels:
      app: frigate
  template:
    metadata:
      annotations: {}
      labels:
        app: frigate
    spec:
      containers:
        - name: frigate
          image: blakeblackshear/frigate:stable-amd64
          # command: ["tail","-f","/dev/null"]
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              name: http-frigate
              protocol: TCP
            - containerPort: 1935
              name: rtmp-frigate
              protocol: TCP
          volumeMounts:
            - mountPath: /db
              name: frigate-database
            - mountPath: /media/frigate
              name: frigate-media
            - mountPath: /dev/bus/usb
              name: usb
            - mountPath: /dev/dri
              name: dri
            - mountPath: /config
              name: frigate-config
            - mountPath: /tmp/cache
              name: cache
            - mountPath: /dev/shm
              name: dshm
          resources:
            requests:
              cpu: 1000m
            limits:
              memory: 2Gi
          livenessProbe:
            initialDelaySeconds: 60
            tcpSocket:
              port: rtmp-frigate
          securityContext:
            privileged: true
        - name: lsyncd
          image: allthings/lsyncd
          args:
            # - -delay 1
            - -rsync
            - /frigate
            - /amazon
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /amazon
              subPath: frigate-clips
              name: amazon-kubernetes-storage
            - mountPath: /frigate
              subPath: frigate-clips
              name: amazon-kubernetes-storage
      imagePullSecrets:
        - name: docker-hub
      volumes:
        - name: amazon-kubernetes-storage
          persistentVolumeClaim:
            claimName: amazon-kubernetes-storage
        - name: frigate-database
          persistentVolumeClaim:
            claimName: frigate-database
        - name: frigate-media
          persistentVolumeClaim:
            claimName: frigate-media
        - name: frigate-config
          configMap:
            name: frigate-config
        - name: usb
          hostPath:
            path: /dev/bus/usb
        - name: dri
          persistentVolumeClaim:
            claimName: dri-pvc
        - name: cache
          emptyDir: {}
        - name: dshm
          emptyDir:
            medium: Memory
      nodeSelector:
        coral: attached
