clusters/takeout/apps/frigate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frigate
spec:
  type: LoadBalancer
  selector:
    app: frigate
  ports:
    - name: http-frigate
      protocol: TCP
      port: 80
      targetPort: 5000
    - name: rtmp-frigate
      protocol: TCP
      port: 1935
      targetPort: 1935
